<resources>
    <string name="app_name">SimonsSays</string>
    <string name="nm">Nom</string>
    <string name="pr">Prénom</string>
    <string name="ps">Pseudo</string>
    <string name="mail">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="rmdp">Répétez le mot de passe</string>
    <string name="inscription">Inscription</string>


    <string name="Facile">Facile</string>
    <string name="Difficile">Difficile</string>
    <string name="Expert">Expert</string>
    <string name="Chronos">Chronos</string>
    <string name="co">Connexion</string>


    <string-array name="sexe">
        <item>Homme</item>
        <item>Femme</item>
        <item>Autre</item>
    </string-array>

    <string name="Erreur">Une erreur est apparue. Veuillez réessayer.</string>
    <string name="score">Score</string>
    <string name="level">Niveau</string>

    <string name="quitter">Revenir au menu principal</string>
    <string name="recommencer">Recommencer</string>

    <string name="Bienvenue">Bienvenue </string>
    <string name="voirScore">Voir le tableau des scores</string>
    <string name="choix_mode">Nouvelle partie ? \nVeuilez choisir un mode de difficulté:</string>

    <string name="reprendreSave">Reprendre ma dernière partie</string>
    <string name="profil">Profile</string>


    <string name="mdoe">Mode </string>

    <string name="homme">Homme</string>>
    <string name="femme">Femme</string>
    <string name="autre">Autre</string>


    <string name="mot_de_passe_incorrect">Mot de passe trop court !</string>
    <string name="authentification_incorrect">Authentification incorrect</string>
    <string name="save">Enregistrer</string>

    <string name="game_over">Game Over !</string>
    <string name="you_loose">Vous avez perdu(e)!</string>
    <string name="temps_restant">Temps restant</string>
</resources>
